2008-08-01  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/gv-update-userconfig: Renamed to src/gv-update-userconfig.in

	* src/Makefile.am: Built src/gv-update-userconfig from
	src/gv-update-userconfig.in by appending the default resources
	
	* src/gv-update-userconfig.in: Option "-r" to remove all resources from
	~/.gv that have their default value

2008-07-31  Bernhard R. Link <brlink@debian.org>

	* doc/gv-update-userconfig.1: Man-page for gv-update-userconfig
	
	* doc/Makefile.am: include and install doc/gv-update-userconfig.1
	
	* src/Makefile.am: Use configurable "sysconfdir" for generating
	src/gv_make_res.dat
	
	* src/Aaa.c (aaaClassRec): Initialize the "dummy"-field.
	
	* src/Scrollbar.c src/actions.c : Some arguments miss a type.
	
	* src/file.c: Include unistd.h as close is used
	
	* src/file.c(file_getTmpFilename): a variable "struct stat s" is
	sometimes not used and therefore need not to be declared in that cases.

2008-07-19  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Makefile.am: The .ad and .dat files are put into /usr/share/gv
	(Patch from Orion Poplawski <orion@cora.nwra.com>)
	
	* configure.ac: Test for the presence of "mkstemp()"
	
	* src/file.c (file_getTmpFilename): Use mkstemp (if available) for
	getting the temporary filename
	
	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, 
	src/main.c, src/main_globals.h, src/resource.c: Add handling of 
	xinerama resource
	
	* src/main.c: Use Xinerama to get display resolution if the xinerama resource 
	is set to "On". If it is set to "Auto", let the heuristic from
	2008-07-12 decide. If it is set to "off", do not use Xinerama at all.
	
	* src/resource.c: More informative error message in case of too old
	~/.gv
	
	* src/Makefile.am src/gv-update-userconfig: New script for upating the
	user config.
	
	* doc/Makefile.am src/Makefile.am: Out of tree built
	Build GV outside of src directory (Patch by Bernhard R. Link)
	
	* configure.ac: Out of tree build
